@@ -1,34 +1,36 @@
 package io.github.denkoch.mycosts.payment.services;
 
+import io.github.denkoch.mycosts.category.repositories.CategoryRepository;
 import io.github.denkoch.mycosts.payment.models.Payment;
-import io.github.denkoch.mycosts.payment.repositories.InMemoryPaymentRepository;
+//import io.github.denkoch.mycosts.payment.repositories.InMemoryPaymentRepository;
 import io.github.denkoch.mycosts.payment.repositories.PaymentFilterRepository;
 import io.github.denkoch.mycosts.payment.repositories.PaymentRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.stereotype.Service;
-import org.springframework.web.bind.annotation.RequestParam;
 
 import java.time.LocalDate;
 import java.util.Collection;
-import java.util.UUID;
+import java.util.stream.Collectors;
 
 @Service
 public class PaymentService {
 
     private PaymentFilterRepository paymentRepository;
+    private CategoryRepository categoryRepository;
 
-    public PaymentService(PaymentFilterRepository paymentRepository) {
+    public PaymentService(PaymentFilterRepository paymentRepository, CategoryRepository categoryRepository) {
         this.paymentRepository = paymentRepository;
+        this.categoryRepository = categoryRepository;
     }
 
-    public Collection<Payment> readPayments(UUID userId, LocalDate before, LocalDate after, UUID categoryId, Long page) {
+    public Collection<Payment> readPayments(Long userId, LocalDate before, LocalDate after, Long categoryId, Long page) {
 
         // values per page
         Long perPage = 3L;
 
-        if (before == null) before = paymentRepository.findLowestDate(userId);
-        if (after == null) after = paymentRepository.findHighestDate(userId);
+        if (before == null) before = LocalDate.now();
+        if (after == null) after = paymentRepository.findLowestDate(userId);
 
         Collection<Payment> byCategoryCollection;
         if (categoryId != null) {
@@ -39,24 +41,25 @@ public class PaymentService {
 
         Collection<Payment> byDateCollection = paymentRepository.findAllByDate(userId, before, after);
 
-        return byCategoryCollection.stream().filter(byDateCollection::contains).skip(page*perPage).limit(perPage).toList();
+        return byDateCollection.stream().filter(byCategoryCollection::contains).skip(page * perPage).
+                limit(perPage).collect(Collectors.toList());
     }
 
-    public Payment readPayment(UUID userId, UUID id) {
+    public Payment readPayment(Long userId, Long id) {
         return paymentRepository.findById(userId, id);
     }
 
     public Payment createPayment(Payment payment) {
-        UUID id = UUID.randomUUID();
-        payment.setId(id);
+        categoryRepository.findById(payment.getUserId(), payment.getCategoryId());
         return paymentRepository.save(payment);
     }
 
     public Payment updatePayment(Payment payment) {
+        categoryRepository.findById(payment.getUserId(), payment.getCategoryId());
         return paymentRepository.save(payment);
     }
 
-    public void deletePayment(UUID userId, UUID id) {
+    public void deletePayment(Long userId, Long id) {
         paymentRepository.deleteById(userId, id);
     }
 
